# wallpaper

./: .gitignore  Makefile  README.md  TODO.md  docker-compose.yml
back/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
back/bg_task/: __init__.py  config.py  tasks.py  template.py
back/celery_task/: Dockerfile  config.py  tasks.py
back/celery_task/smtp/: config.py  smtp_functools.py  template.py  type_email.py
back/core/: crud.py  generate_uuid.py  help.py  logger.py  my_functools.py  validator.py
back/core/abs_model/: model.py
back/src/: conf.py  config.py  main.py
back/src/app/: __init__.py
back/src/app/auth/: __init__.py  config.py  model.py  password_auth.py  router.py  schemas.py  user_manager.py
back/src/app/img/: config.py  generate_img.py  get_user.py  model.py  query.py  router.py  schemas.py  sql_request.py  style_img.py
back/src/app/llama/: config.py  llama_func.py  operation_type.py
back/src/app/redis/: config.py  operation_type.py  redis_func.py
back/src/app/rmq/: config.py  consumer.py  publisher.py
back/src/app/user/: model.py  router.py  schemas.py  user_avatar.json  user_functools.py  ws_manager.py
back/src/db/: config.py  get_session.py
back/src/migrations/: env.py
back/src/migrations/versions/: 2024_10_31_2215-b5c94f76b2f3_create_all_table.py  2024_10_31_2231-4ed8c4893cbd_create_reaction_table.py  2024_11_29_1556-588e3f9243ff_add_columns_img_tag_and_is_public_in_.py
back/src/redis/: redis_func.py
back/tests/: __init__.py  config.py  conftest.py  test_auth.py
back/tests/test_img/: conftest.py  test_img.py
front/: Dockerfile  (+5 more)
(+142 files in other folders)
