[tool.poetry]
name = "-"
version = "0.1.0"
description = ""
authors = ["bot <maximBotPy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
aiohttp = "^3.10.5"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
aiofiles = "^24.1.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"
black = "^24.8.0"
pydantic = {extras = ["email"], version = "^2.9.0"}
fastapi-cache2 = "^0.2.2"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
