[tool.poetry]
name = "walpapper"
version = "0.1.0"
description = ""
authors = ["bot <maximBotPy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
aiofiles = "^24.1.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"
black = "^24.8.0"
fastapi-cache2 = "^0.2.2"
redis = "^5.0.8"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
pytest-asyncio = "^0.24.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
fastapi-pagination = "^0.12.31"
celery = "^5.4.0"
flower = "^2.0.1"
llama-index-llms-ollama = "^0.4.1"
pydantic = {version = "2.9.2", extras = ["email"]}
llama-index = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"